fix z-index of filter button

--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@ nav button {
   height: 100vh;
   width: 50%;
   transition: 0.5s;
+  z-index: 3;
 }
 .visible {
   left: 0 !important;
@@ -59,7 +60,6 @@ nav button {
   padding: 20px;
   margin: auto;
   position: relative;
-  z-index: -1;
 }
 
 .gallery-card {
@@ -99,7 +99,7 @@ nav button {
   background: none;
   border: none;
   cursor: pointer;
-  z-index: 4;
+  z-index: 2;
 }
 #filter button img {
   width: 24px;
